--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_task_selection">TaskSelectionActivity</string>
     <string name="sustantives">Sustantives</string>
+    <string name="select_category">Select a category</string>
 
 </resources>
