--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,11 +17,13 @@
     <string name="save">Guardar</string>
     <string name="admin">Administración</string>
     <string name="back">Volver</string>
+    <string name="buscar">Buscar</string>
     <string name="vocabulary_entry_saved_ok">Se ha guardado correctamente.</string>
     <string name="title_activity_task_selection">Selección de actividad</string>
     <string name="title_activity_admin_task_selection">Selección de tarea de administración</string>
     <string name="title_activity_vocabulary_entry_translation">Traducción de vocabulario</string>
     <string name="title_activity_vocabulary_entry_selection">Administración de vocabulario</string>
     <string name="title_activity_vocabulary_translation_options">VocabularyTranslationOptionsActivity</string>
+    <string name="title_activity_verbs_options">VerbsOptionsActivity</string>
 
 </resources>
